# CodeWhale

crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/tui/src/tools/: git.rs
