[package]
name = "codewhale-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentic terminal facade for open-source and open-weight coding models"

[[bin]]
name = "codewhale"
path = "src/main.rs"

# Short-form convenience alias — forwards to `codewhale` silently.
[[bin]]
name = "codew"
path = "src/bin/codew_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.63" }
codewhale-app-server = { path = "../app-server", version = "0.8.63" }
codewhale-config = { path = "../config", version = "0.8.63" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.63" }
codewhale-mcp = { path = "../mcp", version = "0.8.63" }
codewhale-release = { path = "../release", version = "0.8.63" }
codewhale-secrets = { path = "../secrets", version = "0.8.63" }
codewhale-state = { path = "../state", version = "0.8.63" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustls.workspace = true
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile.workspace = true
tracing.workspace = true

# Parent-death cleanup for delegated server children (#3259): on Linux the
# dispatcher sets PR_SET_PDEATHSIG so the child is signalled if the dispatcher
# dies uncatchably; on Windows it assigns the child to a kill-on-job-close Job
# Object. Mirrors the idioms in crates/tui/src/tools/shell.rs.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
